k8s/ingress/webgatos.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgatos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgatos  
  template: # Pod definition
    metadata:
      labels:
        app: webgatos
    spec:
      containers:
      - name: webgatos
        image: codeurjc/webgatos:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webgatos
spec:
  type: ClusterIP
  selector:
    app: webgatos 
  ports:
    - port: 5000
