k8s/ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: mastercloudapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
   - host: www.mastercloudappsgatos.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webgatos
            port:
              number: 5000      
   - host: www.mastercloudapps.com
     http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: webappanuncios
            port:
              number: 8080
