k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: codeurjc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
   - http:
      paths:
      - path: /webgatos
        pathType: Prefix
        backend:
          service:
            name: webgatos
            port:
              number: 5000      
      - path: /webapp/(.*)
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8080
