k8s/ingress/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
   - http:
      paths:
      - path: /webapp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp
            port:
              number: 8080
